feat: Atualizacao das páginas

--- a/plataforma-educacional/src/App.module.scss
+++ b/plataforma-educacional/src/App.module.scss
@@ -1,4 +1,10 @@
+@import './assets/styles/reference.scss';
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Indie+Flower&display=swap');
 *{
     padding: 0px;
     margin: 0px;
+}
+body{
+    background: $background;
+    background-repeat: no-repeat;
 }
