--- a/plataforma-educacional/src/components/footer/footer.module.scss
+++ b/plataforma-educacional/src/components/footer/footer.module.scss
@@ -1,5 +1,10 @@
 @import '../../assets/styles/reference.scss';
 
 .footer {
-    background-color: $cinzaEscuro;
+    background-color: $laranjaClaro;
+    height: fit-content;
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    color: white;
 }
