--- a/plataforma-educacional/src/components/header/menu/menu.module.scss
+++ b/plataforma-educacional/src/components/header/menu/menu.module.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/styles/reference.scss';
 
 nav {
+    
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -84,7 +85,7 @@ nav {
         }
 
         a {
-            color: $fonteCinza;
+            color: white;
             text-decoration: none;
         }
     }
@@ -112,8 +113,8 @@ nav {
         flex-direction: row;
 
         div {
-            border-bottom: 2px solid $azulEscuro;
-            border-right: 2px solid $azulEscuro;
+            border: 2px solid $azulEscuro;
+            border-radius: 20px 20px 0px 20px;
             padding: 10px;
             margin: 5px 5px;
 
@@ -128,7 +129,7 @@ nav {
         }
 
         a {
-            color: black;
+            color: white;
             text-decoration: none;
         }
     }
